# tv-remote

./: .gitignore  CMakeLists.txt  partitions.csv  readme.md  remote code testing.txt  sdkconfig  sdkconfig.old  warnings.txt
main/: CMakeLists.txt  IRReceiver.h  IRSignalContainer.h  IRTransmitter.h  RemoteButtonSignal.h  action.h  actionlist.h  backlight.h  button_hold_manager.h  channels.h  clicker.h  defines.h  event_timers.h  i2c_init.h  idf_component.yml  ir_transmitter.h  main.cpp  power.h  remotes.h  screen.h  screen2.h  screen_setup.h  sleep_memory.h
main/ui/: app-window.slint  channel-screen.slint  common.slint  component-data.slint  custom-component-data.slint  custom-components.slint  globals.slint  home-screen.slint  remote-screens-index.slint  symbols.slint
main/ui/icons/buttons/: svg_to_png.sh
main/ui/screens/: amazon-screen.slint  backlight-test-screen.slint  channel-screen.slint  hdd-all-buttons-screen.slint  home-screen.slint  ir-receive-screen.slint  screen-list-screen.slint  speakers-all-buttons-screen.slint  tv-all-buttons-screen.slint  youview-all-buttons-screen.slint
main/ui/screens/hdr/: hdr-all-buttons-screen.slint  hdr-dvd-info-screen.slint  hdr-dvd-screen.slint  hdr-home-screen.slint  hdr-play-screen.slint  hdr-record-screen.slint
main/ui/screens/speakers/: speakers-all-buttons-screen.slint  speakers-bluetooth-screen.slint  speakers-radio-screen.slint
main/ui/screens/tv/: channel-screen.slint  nas-photo-video-screen.slint  tv-all-buttons-screen.slint  tv-apps-screen.slint  tv-channel-screen.slint  tv-playback-screen.slint
(+10 files in other folders)
